overflow issue has been resolved

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@ $secondary: #e6f8e0;
 
 body {
     font-size: 12px !important;
+    overflow-x: hidden;
 }
 
 ul,
